--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,18 @@ body{
 	color: white;
 	font-family: 'Lato', sans-serif;
 }
+
+section {
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 10px;
+	padding: 2%;
+	margin: 2%;
+}
+
+#page-title {
+	text-align: center;
+}
+
+#contact-info {
+	text-align: center;
+}
