--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,45 @@ section {
 	max-width: 50%;
 }
 
+.container{
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-rows: auto;
+	grid-gap: 1rem;
+}
+
+.item {
+	background-color: white;
+	color: black;
+	border-radius:  10px;
+	padding: 1rem;
+	/* box-shadow: inset 0 -10px -10px white; */
+}
+
+.skill-title {
+	font-weight: bolder;
+	font-family: monospace;
+	font-size: 15pt;
+}
+
+.progress-bar {
+	/* background-color: white; */
+	border: 5px solid black;
+	height: 25px;
+	border-radius: 25px;
+	z-index: 2;
+	padding: 2px;
+}
+
+.progress-bar > span {
+	display: block;
+	
+	height:100%;
+	background-color: rgb(57, 135, 172);
+	border-radius: 25px;
+	z-index: 0
+}
+
 #page-title {
 	text-align: center;
 }
