--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,97 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
+*{
+	box-sizing: border-box;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+header {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	padding-bottom: 20vh;
+}
+
+header > h1 {
+	
+	font-size: 3em;
+	font-family: Merriweather, serif;
+
+}
+
 
 
 body{
     /* background-color: #050505; */
 	background: url('https://images.unsplash.com/photo-1439792675105-701e6a4ab6f0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
-	background-size: 100%;
+	/* Basic parallax background */
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+	background-position: center;
+	min-height: 100px;
+	
 	color: white;
 	font-family: 'Lato', sans-serif;
+	/*Scrolling without scrollbar */
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
 }
+
+nav > ul {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+	/* flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around; */
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+
+	background-color:  rgba(25, 25, 25);
+	
+}
+
+nav > ul li {
+	padding: 1em;
+	text-align: center;
+}
+
+nav > ul li a{
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	
+
+}
+
+/* Scrolling without scrollbar [Chrome, Safari, Opera]*/
+body::-webkit-scrollbar{
+	display: None;
+}
+
+
 
 section {
 	background: rgba(25, 25, 25, 0.5);
 	border-radius: 10px;
 	padding: 2%;
-	margin: auto;
-	margin-bottom: 1em;
-	max-width: 50%;
+	margin: 1em;
+	max-width: 80%;
+	/* max-width: 50%; */
 }
 
 .container{
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	grid-template-rows: auto;
-	grid-gap: 1rem;
+	grid-gap: 1em;
 }
 
 .item {
@@ -57,10 +126,14 @@ section {
 	z-index: 0
 }
 
-#page-title {
-	text-align: center;
-}
-
 #contact-info {
 	text-align: center;
 }
+
+@media (max-width:"576px"){
+	body{
+		background-attachment: fixed;
+		background-size: auto;
+	}
+	
+} 
