--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ header > h1 {
 }
 
 
-
 body{
     /* background-color: #050505; */
 	background: url('https://images.unsplash.com/photo-1439792675105-701e6a4ab6f0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
@@ -35,14 +34,14 @@ body{
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
-	min-height: 100px;
-	
+
 	color: white;
 	font-family: 'Lato', sans-serif;
 	/*Scrolling without scrollbar */
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+
 
 nav > ul {
 	display: grid;
@@ -76,6 +75,9 @@ body::-webkit-scrollbar{
 	display: None;
 }
 
+main {
+	grid-template-columns: 1fr min(60vw, 100em) 1fr;
+}
 
 
 section {
@@ -83,7 +85,8 @@ section {
 	border-radius: 10px;
 	padding: 2%;
 	margin: 1em;
-	max-width: 80%;
+	grid-column: 2;
+	/* max-width: 80%; */
 	/* max-width: 50%; */
 }
 
@@ -94,12 +97,28 @@ section {
 	grid-gap: 1em;
 }
 
+@keyframes box {
+	0% {background-color: white; width: 50%}
+	50% {background-color: rgb(46, 189, 255); width: 100%}
+	100% {background-color: rgb(255, 46, 46); width: 10%}
+}
+
 .item {
 	background-color: white;
 	color: black;
 	border-radius:  10px;
 	padding: 1rem;
+	/* animation-name: box;
+	animation-duration: 1s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-timing-function: ease-in-out;
+	 */
 	/* box-shadow: inset 0 -10px -10px white; */
+}
+
+.item:hover {
+	
 }
 
 .skill-title {
