--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *{
+
 	box-sizing: border-box;
 }
 
@@ -13,42 +15,61 @@ header {
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: flex-end;
-	padding-bottom: 20vh;
+	align-self: flex-start;
+	padding: 10%;
+	justify-content: flex-start;
+	/* padding-bottom: 20vh; */
+}
+
+#arrow {
+	size: 4em;
 }
 
 header > h1 {
-	
-	font-size: 3em;
+	font-size: 6rem;
 	font-family: Merriweather, serif;
+	line-height: 1.5em;
+	
 
 }
 
+header > h1 > span {
+	display: inline-block;
+	opacity: 0;
+}
+
+
 
 body{
-    /* background-color: #050505; */
-	background: url('https://images.unsplash.com/photo-1439792675105-701e6a4ab6f0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80');
+    background-color: white;
+	/* background: url('https://images.unsplash.com/photo-1439792675105-701e6a4ab6f0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80'); */
 	/* Basic parallax background */
+	
+	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
-	background-position: center;
+	
 
-	color: white;
-	font-family: 'Lato', sans-serif;
+	color: rgb(29, 29, 29);
+	font-family: 'Poppins', sans-serif;
+	font-size: 40px;
 	/*Scrolling without scrollbar */
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
 
+nav {
+	position: -webkit-sticky;
+}
 
 nav > ul {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
-	/* flex-direction: row;
+	display: flex;
+
+	/* grid-template-columns: repeat(auto-fill, minmax(200px,1fr)); */
+	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around; */
+	justify-content: space-around;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -66,8 +87,6 @@ nav > ul li a{
 	color: white;
 	text-align: center;
 	text-decoration: none;
-	
-
 }
 
 /* Scrolling without scrollbar [Chrome, Safari, Opera]*/
@@ -76,16 +95,18 @@ body::-webkit-scrollbar{
 }
 
 main {
-	grid-template-columns: 1fr min(60vw, 100em) 1fr;
+	display: grid;
+	grid-template-columns: 1fr 60vw 1fr;
 }
 
 
 section {
 	background: rgba(25, 25, 25, 0.5);
+	color: white;
 	border-radius: 10px;
-	padding: 2%;
+	padding: 2em;
 	margin: 1em;
-	grid-column: 2;
+	grid-column: 2
 	/* max-width: 80%; */
 	/* max-width: 50%; */
 }
@@ -97,28 +118,12 @@ section {
 	grid-gap: 1em;
 }
 
-@keyframes box {
-	0% {background-color: white; width: 50%}
-	50% {background-color: rgb(46, 189, 255); width: 100%}
-	100% {background-color: rgb(255, 46, 46); width: 10%}
-}
-
 .item {
 	background-color: white;
 	color: black;
 	border-radius:  10px;
 	padding: 1rem;
-	/* animation-name: box;
-	animation-duration: 1s;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-timing-function: ease-in-out;
-	 */
-	/* box-shadow: inset 0 -10px -10px white; */
-}
 
-.item:hover {
-	
 }
 
 .skill-title {
