--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,208 +1,312 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
-*{
-
+* {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
+:root {
+	--nav-width: 200px;
+	--background-color: rgb(15, 15, 15);
+	--background-light: rgb(27, 27, 27);
+	--section-color: #180e61;
+	--section-light: #241692;
+	--border-rounding: 10px; 
+}
+
 html {
 	scroll-behavior: smooth;
-	width: 100%;
 }
 
 html, body {
-    overflow-x:hidden;
+	overflow: hidden;
+}
+
+/* width */
+
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+/* Track */
+
+::-webkit-scrollbar-track {
+	background: #00000000;
+}
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+	background: rgb(167, 167, 167);
+	border-radius: var(--border-rounding);
+}
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
 
 header {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-self: flex-start;
-	padding: 10%;
-	justify-content: flex-start;
-	/* padding-bottom: 20vh; */
+	position: absolute;
+	left: 10%;
+	color: rgb(255, 255, 255);
 }
 
 #arrow {
 	size: 4em;
 }
 
-header > h1 {
+#page-title {
+	position: absolute;
 	font-size: 6rem;
 	font-family: Merriweather, serif;
-	line-height: 1.5em;
-	
-
+	/* line-height: 1.5em; */
 }
 
-header > h1 > span {
+#page-title>span {
 	display: inline-block;
-	opacity: 0;
 }
 
-
-
-body{
-    background-color: white;
-	/* background: url('https://images.unsplash.com/photo-1439792675105-701e6a4ab6f0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80'); */
-	/* Basic parallax background */
-	background: rgb(52,52,59);
-	background: linear-gradient(0deg, rgba(52,52,59,1) 0%, rgba(255,255,255,1) 100%);
-	/* background-position: center top;
+body {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	background: var(--background-color);
+	/* background: linear-gradient(0deg, rgba(52, 52, 59, 1) 0%, rgba(255, 255, 255, 1) 100%); */
 	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: cover;
-	 */
-
 	color: rgb(29, 29, 29);
 	font-family: 'Poppins', sans-serif;
-	font-size: 40px;
-	/*Scrolling without scrollbar */
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
+	font-size: 1.5rem;
+}
+
+.container {
+	margin: auto;
+	position: relative;
+	display: grid;
+	grid-template-columns: 4fr 0.5fr;
+	/* box-shadow: 0 0 10px 10px rgb(65, 65, 65); */
 }
 
 nav {
-	position: -webkit-sticky;
-}
-
-nav > ul {
+	grid-column: 2;
+	position: relative;
 	display: flex;
-
-	/* grid-template-columns: repeat(auto-fill, minmax(200px,1fr)); */
-	flex-direction: row;
+	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: center;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-
-	background-color:  rgba(25, 25, 25);
-	
+	clip-path: inset(0px 0px 0 0);
 }
 
-nav > ul li {
-	padding: 1em;
-	text-align: center;
-}
-
-nav > ul li a{
+nav>button {
+	transition: right 0.5s, background-color 0.5s;
+	position: relative;
+	background-color: rgba(25, 25, 25);
 	color: white;
+	padding: 2em;
 	text-align: center;
-	text-decoration: none;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	/* z-index: 1; */
 }
 
-/* Scrolling without scrollbar [Chrome, Safari, Opera]*/
-body::-webkit-scrollbar{
-	display: None;
+nav button:first-child {
+	border-top-right-radius: var(--border-rounding);
+}
+
+nav button:last-child {
+	border-bottom-right-radius: var(--border-rounding);
+}
+
+nav>button:hover {
+	background-color: var(--section-light);
+}
+
+nav>button.active {
+	background: var(--section-light);
 }
 
 main {
-	/* display: grid; */
-	/* grid-template-columns: 1fr 60vw 1fr; */
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
+	position: relative;
+	clip-path: inset(0 0);
+	background-color: var(--background-light);
+	border-radius: var(--border-rounding) 0 0 var(--border-rounding);
 
+}
 
 section {
-	/* background: rgba(25, 25, 25, 0.5); */
-	background: #1800cf;
+	grid-column: 1;
+	display: block;
+	position: absolute;
+	left: 101%;
+	height: 100%;
+	width: 100%;
+	transition: left 0.5s, opacity 0.5s;
+	/* opacity: 0; */
+	background: var(--section-color);
 	color: white;
-	border-radius: 10px;
+	border-radius: var(--border-rounding) 0 0 var(--border-rounding);
 	padding: 2em;
-	margin: auto;
-	margin-top: 2em;
-	/* grid-column: 2; */
-	/* max-width: 60vw; */
-	/* max-width: 50%; */
+	z-index: 0;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	font-size: min(1em, 5vw);
+	line-height: 1.5em;
 }
 
-section > h2 {
-	padding-bottom: 1em;
+section.active {
+	left: 0;
+	opacity: 1;
+	/* display: block; */
 }
 
-.container{
-	/* display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-	grid-template-rows: auto;
-	grid-gap: 1em; */
+section>h2 {
+	margin-bottom: 1em;
+}
 
+section>p {
+	position: relative;
+	margin-bottom: 0.5em;
+}
+
+.item-container {
+	/* position: absolute; */
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-evenly;
 }
 
 .item {
-	background-color: white;
-	color: black;
-	border-radius:  10px;
-	padding: 1rem;
-	margin: auto;
-
+	/* float: left; */
+	min-width: 40%;
+	
+	background-color: var(--section-light);
+	color: rgb(243, 243, 243);
+	border-radius: var(--border-rounding);
+	padding: 1em;
+	margin: 1em;
 }
 
-.skill-title {
+.item.grow {
+	flex-grow: 1;
+}
+
+.item>h3 {
+	margin-bottom: 0.5em;
+}
+
+.item>p {
+	line-height: 1em;
+	vertical-align: middle;
+	font-size: 1em;
+	padding: 0.2em;
+}
+
+.item>p>img {
+	vertical-align: middle;
+	float: "left";
+	/* height: auto; */
+	/* margin: auto; */
+}
+/* 
+.icon::before {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  } */
+
+
+.github::after{
+	font-family: "Font Awesome 5 Brands";
+	font-weight: 900;
+	content: "\f09b";
+	float: right;
+	color: white;
+}
+
+.project>a{
+	  text-decoration: none;
+	  color: inherit;
+}
+
+
+.project>a>video{
+	border-radius: var(--border-rounding);
+	width: 100%;
+	margin-bottom: 1em;
+	/* box-shadow: 0 0 4px 5px var(--section-color); */
+}
+
+.project>a>video::hover{
+	border-radius: var(--border-rounding);
+	width: 100%;
+	margin-bottom: 1em;
+	/* box-shadow: 0 0 4px 5px var(--section-color); */
+}
+
+.express {
+	font: helvetica neue,open sans,sans-serif;
+	font-style: normal;
+}
+
+.express::before {
+	content: "ex";
+}
+/* 
+.item>h3 {
 	font-weight: bolder;
 	font-family: monospace;
 	font-size: 15pt;
-}
+} */
 
 .progress-bar {
 	/* background-color: white; */
-	border: 5px solid black;
+	/* border: 5px solid black; */
+	background-color: var(--section-color);
 	height: 25px;
 	border-radius: 25px;
 	z-index: 2;
 	padding: 2px;
 }
 
-.progress-bar > span {
+.progress-bar>span {
 	display: block;
-	
-	height:100%;
+	height: 100%;
 	background-color: rgb(57, 135, 172);
 	border-radius: 25px;
 	z-index: 0
 }
 
-#contact-info {
-	text-align: center;
+
+
+
+@media only screen and (min-width: 768px) {
+	/* body{
+		background-attachment: fixed;
+		background-size: auto;
+	} */
+	/* main {
+		grid-template-columns: 1fr 100vw 1fr;
+	} */
+	/* section {
+		max-width: 100vw;
+	} */
 }
 
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 1336px) {
 	/* body{
 		background-attachment: fixed;
 		background-size: auto;
 	} */
-
 	/* main {
 		grid-template-columns: 1fr 100vw 1fr;
 	} */
-	
-	section {
-		max-width: 100vw;
-	}
-} 
-
-@media only screen and (min-width: 1336px){
-	/* body{
-		background-attachment: fixed;
-		background-size: auto;
-	} */
-
-	/* main {
-		grid-template-columns: 1fr 100vw 1fr;
-	} */
-	
-	section {
+	/* section {
 		max-width: 80vw;
-	}
-} 
+	} */
+}
