--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -8,17 +8,14 @@
   padding: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-html body {
+html, body {
   overflow: hidden;
+  min-height: 100%;
 }
 
 header {
   position: absolute;
   left: 10%;
-  color: white;
 }
 
 #page-title {
@@ -30,16 +27,54 @@ header {
   display: inline-block;
 }
 
-body {
+.root {
+  transition: all 0.2s;
   height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
-  background: #0f0f0f;
-  /* background: linear-gradient(0deg, rgba(52, 52, 59, 1) 0%, rgba(255, 255, 255, 1) 100%); */
   background-repeat: no-repeat;
-  color: #1d1d1d;
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
+}
+.dark .root {
+  background-color: #181818;
+  color: #f0f0f0;
+}
+.light .root {
+  background-color: #e9e9e9;
+  color: black;
+}
+
+.menu {
+  position: absolute;
+  right: 50px;
+  top: 50px;
+  z-index: 2;
+}
+.menu > button {
+  transition: all 0.2s;
+  background-color: inherit;
+  border-radius: 50%;
+  padding: 10px;
+  position: relative;
+  right: 0;
+  border: none;
+  outline: none;
+  font-size: 30px;
+  cursor: pointer;
+}
+.dark .menu > button {
+  color: #f0f0f0;
+}
+.light .menu > button {
+  color: black;
+}
+.menu > button:hover {
+  background-color: grey;
+}
+.menu > button.rotate {
+  transform: rotate(180deg);
 }
 
 .container {
@@ -48,7 +83,6 @@ body {
   display: grid;
   grid-template-columns: 4fr 0.5fr;
   border-radius: 10px;
-  box-shadow: 0 0 4px 8px #0e0e0e;
 }
 
 nav {
@@ -78,17 +112,22 @@ nav > button:first-child {
 nav > button:last-child {
   border-bottom-right-radius: 10px;
 }
-nav > button:hover {
-  background-color: #241692;
+.dark nav > button:hover {
+  background: #180e61;
 }
-nav > button.active {
-  background: #241692;
+.light nav > button:hover {
+  background: #10199b;
+}
+.dark nav > button.active {
+  background: #180e61;
+}
+.light nav > button.active {
+  background: #10199b;
 }
 
 main {
   position: relative;
   clip-path: inset(0 0);
-  background-color: #1b1b1b;
   border-radius: 10px 0 0 10px;
 }
 
@@ -101,8 +140,6 @@ section {
   width: 100%;
   transition: left 0.5s, opacity 0.5s;
   /* opacity: 0; */
-  background: #180e61;
-  color: white;
   border-radius: 10px 0 0 10px;
   padding: 2em;
   z-index: 0;
@@ -118,11 +155,27 @@ section::-webkit-scrollbar-track {
   background: #00000000;
 }
 section::-webkit-scrollbar-thumb {
-  background: #241692;
   border-radius: 10px;
 }
-section::-webkit-scrollbar-thumb:hover {
+.dark section::-webkit-scrollbar-thumb {
+  background: #241692;
+}
+.light section::-webkit-scrollbar-thumb {
+  background: #1829be;
+}
+.dark section::-webkit-scrollbar-thumb:hover {
   background: #331fcd;
+}
+.light section::-webkit-scrollbar-thumb:hover {
+  background: #2d40e4;
+}
+.dark section {
+  color: #f0f0f0;
+  background: #180e61;
+}
+.light section {
+  color: #f0f0f0;
+  background: #10199b;
 }
 section.active {
   left: 0;
@@ -145,13 +198,19 @@ section > p {
 }
 
 .item {
-  /* float: left; */
   min-width: 40%;
-  background-color: #241692;
-  color: #f3f3f3;
   border-radius: 10px;
+  box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
   padding: 0.8em;
   margin: 1em auto;
+}
+.dark .item {
+  color: #f0f0f0;
+  background: #241692;
+}
+.light .item {
+  color: #f0f0f0;
+  background: #1829be;
 }
 .item.grow {
   flex-grow: 1;
@@ -208,7 +267,12 @@ section > p {
 .contact ul li a {
   margin-left: 1em;
   text-decoration: none;
-  color: white;
+}
+.dark .contact ul li a {
+  color: #f0f0f0;
+}
+.light .contact ul li a {
+  color: #f0f0f0;
 }
 .contact ul li a:hover {
   color: grey;
@@ -225,11 +289,18 @@ section > p {
 .progress-bar {
   /* background-color: white; */
   /* border: 5px solid black; */
-  background-color: #180e61;
   height: 25px;
   border-radius: 25px;
   z-index: 2;
   padding: 2px;
+}
+.dark .progress-bar {
+  color: #f0f0f0;
+  background: #241692;
+}
+.light .progress-bar {
+  color: black;
+  background: #1829be;
 }
 .progress-bar span {
   display: block;
