--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -1,17 +1,15 @@
 @use "sass:color";
+@import "themes";
 
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 $nav-width: 200px;
-$background-color: rgb(15, 15, 15);
-$background-light: rgb(27, 27, 27);
-$section-color: #180e61;
-$section-light: #241692;
+// $bg: rgb(15, 15, 15);
 $border-rounding: 10px;
-
 $item-font-size: 0.8em;
+
 
 @mixin custom-scrollbar() {
     &::-webkit-scrollbar {
@@ -21,11 +19,17 @@ $item-font-size: 0.8em;
         background: #00000000;
     }
     &::-webkit-scrollbar-thumb {
-        background: $section-light;
+        @include theme() {
+            background: t($bg-3);
+        }
         border-radius: $border-rounding;
 
         &:hover {
-            background: color.scale($section-light, $lightness: 20%);
+            @include theme() {
+                // color: t($text);
+                background: color.scale(t($bg-3), $lightness: 20%);
+            }
+            // background: $section-light
         }
     }
 }
@@ -36,18 +40,15 @@ $item-font-size: 0.8em;
     padding: 0;
 }
 
-html {
-    scroll-behavior: smooth;
-
-    body {
-        overflow: hidden;
-    }
+html, body {
+    overflow: hidden;
+    min-height: 100%;
 }
 
 header {
     position: absolute;
     left: 10%;
-    color: rgb(255, 255, 255);
+    // color: rgb(255, 255, 255);
 }
 
 #page-title {
@@ -60,16 +61,51 @@ header {
     }
 }
 
-body {
+
+.root {
+    transition: all 0.2s;
     height: 100vh;
     display: flex;
+    justify-content: center;
     align-items: center;
-    background: $background-color;
-    /* background: linear-gradient(0deg, rgba(52, 52, 59, 1) 0%, rgba(255, 255, 255, 1) 100%); */
     background-repeat: no-repeat;
-    color: rgb(29, 29, 29);
+
     font-family: "Poppins", sans-serif;
     font-size: 1.5rem;
+    
+    @include theme() {
+        background-color: t($bg-1);
+        color: t($text-color);
+    }
+}
+
+.menu {
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    z-index: 2;
+    > button {
+        @include theme() {
+            color: t($text-color);
+        }
+        transition: all 0.2s;
+        background-color: inherit;
+        border-radius: 50%;
+        padding: 10px;
+        position: relative;
+        right: 0;
+        border: none;
+        outline: none;
+        font-size: 30px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: grey;
+        }
+        &.rotate {
+            transform: rotate(180deg);
+        }
+    }
 }
 
 .container {
@@ -78,7 +114,8 @@ body {
     display: grid;
     grid-template-columns: 4fr 0.5fr;
     border-radius: $border-rounding;
-    box-shadow: 0 0 4px 8px color.scale($background-color, $lightness: -10%);
+    // box-shadow: 0 0 4px 8px color.scale($bg, $lightness: -10%);
+    // min-width: 100%;
 }
 
 nav {
@@ -109,10 +146,14 @@ nav {
             border-bottom-right-radius: $border-rounding;
         }
         &:hover {
-            background-color: $section-light;
+            @include theme() {
+                background: t($bg-2);
+            }
         }
         &.active {
-            background: $section-light;
+            @include theme() {
+                background: t($bg-2);
+            }
         }
     }
 }
@@ -120,12 +161,17 @@ nav {
 main {
     position: relative;
     clip-path: inset(0 0);
-    background-color: $background-light;
+    // background-color: $background-light;
     border-radius: $border-rounding 0 0 $border-rounding;
 }
 
 section {
     @include custom-scrollbar;
+    @include theme() {
+        color: t($text-2);
+        background: t($bg-2);
+    }
+
     grid-column: 1;
     display: block;
     position: absolute;
@@ -134,8 +180,8 @@ section {
     width: 100%;
     transition: left 0.5s, opacity 0.5s;
     /* opacity: 0; */
-    background: $section-color;
-    color: white;
+    // background: $section-color;
+    // color: white;
     border-radius: $border-rounding 0 0 $border-rounding;
     padding: 2em;
     z-index: 0;
@@ -168,11 +214,15 @@ section {
 }
 
 .item {
-    /* float: left; */
+    @include theme() {
+        color: t($text-2);
+        background: t($bg-3);
+    }
     min-width: 40%;
-    background-color: $section-light;
-    color: rgb(243, 243, 243);
+    // background-color: $section-light;
+    // color: rgb(243, 243, 243);
     border-radius: $border-rounding;
+    box-shadow: 0 0 8px 4px rgb(0, 0, 0, 0.1);
     padding: $item-font-size;
     margin: 1em auto;
 
@@ -246,9 +296,11 @@ section {
             a {
                 margin-left: 1em;
                 text-decoration: none;
-                color: white;
+                @include theme() {
+                    color: t($text-2);    
+                }
 
-                &:hover{
+                &:hover {
                     color: grey;
                 }
             }
@@ -268,7 +320,11 @@ section {
 .progress-bar {
     /* background-color: white; */
     /* border: 5px solid black; */
-    background-color: $section-color;
+    // background-color: $section-color;
+    @include theme() {
+        color: t($text-color);
+        background: t($bg-3);
+    }
     height: 25px;
     border-radius: 25px;
     z-index: 2;
@@ -281,4 +337,7 @@ section {
         border-radius: 25px;
         z-index: 0;
     }
+}
+
+@media (prefers-color-theme: dark) {
 }
