--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,383 +1,1 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
-  overflow: hidden;
-  min-height: 100%;
-}
-
-header {
-  position: absolute;
-  left: 10%;
-}
-
-#page-title {
-  position: absolute;
-  font-size: 6rem;
-  font-family: Merriweather, serif;
-}
-#page-title > span {
-  display: inline-block;
-}
-
-.root {
-  transition: all 0.2s;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-repeat: no-repeat;
-  font-family: "Poppins", sans-serif;
-  font-size: 2rem;
-}
-.dark .root {
-  background-color: #181818;
-  color: #f0f0f0;
-}
-.light .root {
-  background-color: #e9e9e9;
-  color: black;
-}
-
-.menu {
-  position: absolute;
-  right: 2%;
-  top: 2%;
-  z-index: 2;
-}
-.menu > button {
-  -webkit-tap-highlight-color: transparent;
-  transition: all 0.2s;
-  background-color: inherit;
-  border-radius: 50%;
-  padding: 10px;
-  position: relative;
-  right: 0;
-  border: none;
-  outline: none;
-  font-size: 30px;
-  cursor: pointer;
-}
-.dark .menu > button {
-  color: #f0f0f0;
-}
-.light .menu > button {
-  color: black;
-}
-.menu > button.rotate {
-  transform: rotate(180deg);
-}
-
-.container {
-  position: relative;
-  display: grid;
-  grid-template-columns: 70vw 1fr;
-  border-radius: 10px;
-  min-height: 70vh;
-}
-
-nav {
-  height: 100%;
-  grid-column: 2;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  clip-path: inset(-1px -1px);
-  border-radius: 10px;
-}
-nav > button {
-  flex: 1;
-  transition: right 0.5s, background-color 0.5s;
-  position: relative;
-  background-color: #191919;
-  color: white;
-  padding: 1em;
-  font-size: 100%;
-  text-align: center;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  /* z-index: 1; */
-}
-nav > button:first-child {
-  border-top-right-radius: 10px;
-}
-nav > button:last-child {
-  border-bottom-right-radius: 10px;
-}
-.dark nav > button:hover {
-  background: #180e61;
-}
-.light nav > button:hover {
-  background: #10199b;
-}
-.dark nav > button.active {
-  background: #180e61;
-}
-.light nav > button.active {
-  background: #10199b;
-}
-nav > button > i {
-  float: left;
-  margin-right: 10px;
-}
-
-main {
-  grid-column: 1;
-  position: relative;
-  clip-path: inset(0px -10px);
-  border-radius: 10px 0 0 10px;
-}
-
-section {
-  display: block;
-  position: absolute;
-  left: 101%;
-  height: 100%;
-  width: 100%;
-  transition: left 0.5s, opacity 0.5s;
-  border-radius: 10px 0 0 10px;
-  padding: 2em;
-  z-index: 0;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  font-size: 0.8em;
-  line-height: 1.5em;
-}
-section::-webkit-scrollbar {
-  width: 5px;
-}
-section::-webkit-scrollbar-track {
-  background: #00000000;
-}
-section::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-}
-.dark section::-webkit-scrollbar-thumb {
-  background: #241692;
-}
-.light section::-webkit-scrollbar-thumb {
-  background: #1829be;
-}
-.dark section::-webkit-scrollbar-thumb:hover {
-  background: #331fcd;
-}
-.light section::-webkit-scrollbar-thumb:hover {
-  background: #2d40e4;
-}
-.dark section {
-  color: #f0f0f0;
-  background: #180e61;
-}
-.light section {
-  color: #f0f0f0;
-  background: #10199b;
-}
-section.active {
-  left: 0;
-  opacity: 1;
-}
-section > h2 {
-  margin-bottom: 1em;
-}
-section > p {
-  position: relative;
-  margin-bottom: 0.5em;
-}
-
-@media only screen and (max-width: 768px) {
-  .root {
-    align-items: flex-end;
-  }
-
-  .container {
-    width: 90vw;
-    height: 90vh;
-    bottom: 0;
-    grid-template-columns: none;
-    grid-template-rows: 1fr 100px;
-  }
-
-  main {
-    grid-column: 1;
-    grid-row: 1;
-    clip-path: inset(-10px 0px);
-  }
-
-  section {
-    height: 105%;
-    transition: top 0.5s, opacity 0.5s;
-    left: inherit;
-    top: 101%;
-    word-wrap: break-word;
-    border-radius: 10px 10px 0 0;
-  }
-  section.active {
-    left: inherit;
-    top: 0;
-    opacity: 1;
-  }
-
-  nav {
-    grid-column: 1;
-    grid-row: 2;
-    flex-direction: row;
-    font-size: 2vw;
-  }
-  nav > button:first-child {
-    border-top-right-radius: 0;
-    border-top-left-radius: 10px;
-  }
-  nav > button:last-child {
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 10px;
-  }
-  nav > button * {
-    pointer-events: none;
-  }
-  nav > button > i {
-    float: unset;
-    margin: unset;
-    font-size: 2em;
-  }
-  nav > button > span.mobile-hide {
-    display: none;
-  }
-}
-.item-container {
-  /* position: absolute; */
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-}
-
-.item {
-  min-width: 300px;
-  border-radius: 10px;
-  box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
-  padding: 0.8em;
-  margin: 1em auto;
-}
-.dark .item {
-  color: #f0f0f0;
-  background: #241692;
-}
-.light .item {
-  color: #f0f0f0;
-  background: #1829be;
-}
-.item.grow {
-  flex-grow: 1;
-}
-.item > h3 {
-  margin-bottom: 0.5em;
-}
-.item > p {
-  vertical-align: middle;
-  font-size: 0.8em;
-  padding: 0.2em;
-}
-.item > p img {
-  vertical-align: middle;
-  float: "left";
-}
-
-.github::after {
-  font-family: "Font Awesome 5 Brands";
-  font-weight: 900;
-  content: "";
-  float: right;
-  color: white;
-}
-
-.project a {
-  text-decoration: none;
-  color: inherit;
-}
-.project a video {
-  border-radius: 10px;
-  width: 100%;
-  margin-bottom: 0.8em;
-  /* box-shadow: 0 0 4px 5px $section-color); */
-}
-
-.education h3 > span {
-  font-weight: lighter;
-}
-.education ul {
-  margin-left: 0.8em;
-}
-.education ul li {
-  font-size: 0.8em;
-  margin-bottom: 0.8em;
-}
-
-.contact ul {
-  list-style: none;
-}
-.contact ul li {
-  vertical-align: middle;
-}
-.contact ul li i {
-  width: 24px;
-}
-.contact ul li a {
-  margin-left: 1em;
-  text-decoration: none;
-}
-.dark .contact ul li a {
-  color: #f0f0f0;
-}
-.light .contact ul li a {
-  color: #f0f0f0;
-}
-.contact ul li a:hover {
-  color: grey;
-}
-
-.break {
-  content: "\a";
-  white-space: pre;
-}
-
-.express {
-  font: helvetica neue, open sans, sans-serif;
-  font-style: normal;
-}
-.express::before {
-  content: "ex";
-}
-
-.progress-bar {
-  /* background-color: white; */
-  /* border: 5px solid black; */
-  height: 25px;
-  border-radius: 25px;
-  z-index: 2;
-  padding: 2px;
-}
-.dark .progress-bar {
-  color: #f0f0f0;
-  background: #241692;
-}
-.light .progress-bar {
-  color: black;
-  background: #1829be;
-}
-.progress-bar span {
-  display: block;
-  height: 100%;
-  background-color: #3987ac;
-  border-radius: 25px;
-  z-index: 0;
-}
-
-/*# sourceMappingURL=main.css.map */
+﻿@import"https://fonts.googleapis.com/css2?family=Lato&display=swap";@import"https://fonts.googleapis.com/css2?family=Merriweather&display=swap";@import"https://fonts.googleapis.com/css2?family=Poppins&display=swap";*{box-sizing:border-box;margin:0;padding:0}html,body{overflow:hidden;min-height:100%}header{position:absolute;left:10%}body.no-anim *{-webkit-transition:none !important;-moz-transition:none !important;-o-transition:none !important;transition:none !important}#page-title{position:absolute;font-size:6rem;font-family:Merriweather,serif}#page-title>span{display:inline-block}#root{transition:all .2s;min-height:100vh;display:flex;justify-content:center;align-items:center;background-repeat:no-repeat;font-family:"Poppins",sans-serif;font-size:2rem}.dark #root{background-color:#0c0c0c;color:#f0f0f0}.light #root{background-color:#e9e9e9;color:#000}.menu{position:absolute;right:2%;top:2%;z-index:2}.menu>button{-webkit-tap-highlight-color:transparent;transition:all .2s;background-color:inherit;border-radius:50%;padding:10px;position:relative;right:0;border:none;outline:none;font-size:30px;cursor:pointer}.dark .menu>button{color:#f0f0f0}.light .menu>button{color:#000}.menu>button:hover{transform:scale(1.2)}.menu>button.rotate{transform:rotate(180deg)}.container{position:relative;display:grid;grid-template-columns:70vw 1fr;border-radius:10px;min-height:70vh;box-shadow:0 0 10px 10px rgba(0,0,0,.075)}nav{height:100%;grid-column:2;position:relative;display:flex;flex-direction:column;flex-wrap:wrap;clip-path:inset(-1px -1px);border-radius:10px}nav>button{flex:1;transition:right .5s,background-color .5s;position:relative;background-color:#252525;color:#fff;padding:1em;font-size:100%;text-align:center;outline:none;border:none;cursor:pointer}nav>button:first-child{border-top-right-radius:10px}nav>button:last-child{border-bottom-right-radius:10px}.dark nav>button:hover{background:#180e61}.light nav>button:hover{background:#10199b}.dark nav>button.active{background:#180e61}.light nav>button.active{background:#10199b}nav>button>i{float:left;margin-right:10px}main{grid-column:1;background-color:rgba(131,131,131,.034);position:relative;clip-path:inset(0px -2px);border-radius:10px 0 0 10px}section{display:block;position:absolute;left:101%;height:100%;width:100%;transition:left .5s,opacity .5s;border-radius:10px 0 0 10px;padding:2em;z-index:0;overflow-y:scroll;overflow-x:hidden;font-size:.8em;line-height:1.5em}section::-webkit-scrollbar{width:5px}section::-webkit-scrollbar-track{background:#00000000}section::-webkit-scrollbar-thumb{border-radius:10px}.dark section::-webkit-scrollbar-thumb{background:#241692}.light section::-webkit-scrollbar-thumb{background:#1829be}.dark section::-webkit-scrollbar-thumb:hover{background:#331fcd}.light section::-webkit-scrollbar-thumb:hover{background:#2d40e4}.dark section{color:#f0f0f0;background:#180e61}.light section{color:#f0f0f0;background:#10199b}section.active{left:0;opacity:1}section>h2{margin-top:10px;margin-bottom:10px}section>p{position:relative;margin-bottom:.5em}.item-container{display:flex;flex-flow:row wrap;justify-content:space-evenly}.item{min-width:300px;max-width:45%;border-radius:10px;box-shadow:0 0 8px 4px rgba(0,0,0,.1);padding:.8em;margin:1em auto}.dark .item{color:#f0f0f0;background:#241692}.light .item{color:#f0f0f0;background:#1829be}.item.grow{flex-grow:1;max-width:100%}.item>h3{margin-bottom:.5em}.item>p{vertical-align:middle;font-size:.8em;padding:.2em}.item>p img{vertical-align:middle;float:"left"}.github::after{font-family:"Font Awesome 5 Brands";font-weight:900;content:"";float:right;color:#fff}.content{transition:all .5s;max-width:100%;display:block;position:relative;margin:15px auto}.content video{display:block;width:100%;border-radius:10px}.content a{text-decoration:none;width:100%;height:100%;transition:all .5s;position:absolute;opacity:0;top:0;display:flex;justify-content:center;align-items:center;font-size:2em;color:#fff}.content:hover{transform:scale(1.1)}.content:hover a{background-color:rgba(22,22,22,.418);opacity:1}.work h3>span{margin-left:.2em;font-weight:lighter;font-size:80%}.work ul{margin-left:.8em}.work ul li{font-size:.8em;margin-bottom:.8em}.contact ul{list-style:none}.contact ul li{vertical-align:middle}.contact ul li i{width:24px;margin-right:1em}.contact ul li a{text-decoration:none}.dark .contact ul li a{color:#f0f0f0}.light .contact ul li a{color:#f0f0f0}.contact ul li a:hover{color:gray}.break{content:"\a";white-space:pre}.express{font:helvetica neue,open sans,sans-serif;font-style:normal}.express::before{content:"ex"}.progress-bar{height:25px;border-radius:25px;z-index:2;padding:2px}.dark .progress-bar{color:#f0f0f0;background:#241692}.light .progress-bar{color:#000;background:#1829be}.progress-bar span{display:block;height:100%;background-color:#3987ac;border-radius:25px;z-index:0}@media only screen and (max-width: 768px){.root{align-items:flex-end}.container{width:90vw;height:90vh;bottom:0;grid-template-columns:none;grid-template-rows:1fr 100px}main{grid-column:1;grid-row:1;clip-path:inset(-4px 0px)}section{height:105%;transition:top .5s,opacity .5s;left:inherit;top:101%;word-wrap:break-word;border-radius:10px 10px 0 0}section.active{left:inherit;top:0;opacity:1}.item{max-width:100%}nav{grid-column:1;grid-row:2;flex-direction:row;font-size:2vw}nav>button:first-child{border-top-right-radius:0;border-top-left-radius:10px}nav>button:last-child{border-bottom-right-radius:0;border-top-right-radius:10px}nav>button>i{float:unset;margin:unset;font-size:2em}nav>button>span.mobile-hide{display:none}}/*# sourceMappingURL=main.css.map */
