--- a/styles/sass/_themes.scss
+++ b/styles/sass/_themes.scss
@@ -1,6 +1,7 @@
 $bg-1: 'bg-primary';
 $bg-2: 'bg-secondary';
 $bg-3: 'bg-tertiary';
+$bg-grey: 'bg-grey';
 $text-color: 'text-color';
 $text-2: 'text-secondary';
 
@@ -11,14 +12,16 @@ $themes: (
         text-secondary: rgb(240, 240, 240),
         bg-primary: rgb(12, 12, 12),
         bg-secondary: #180e61,
-        bg-tertiary: #241692
+        bg-tertiary: #241692,
+        bg-grey: rgb(37, 37, 37)
     ),
     light: (
         text-color: rgb(0, 0, 0),
         text-secondary: rgb(240, 240, 240),
         bg-primary: rgb(233, 233, 233),
         bg-secondary: #10199b,
-        bg-tertiary: #1829be
+        bg-tertiary: #1829be,
+        bg-grey: rgb(37, 37, 37)
     ),
 );
 
