--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -114,6 +114,7 @@ button {
             background: none;
             vertical-align:middle;
             transition: all 0.2s;
+            font-size: 30px;
     
             &:hover {
                 transform: scale(1.2);
