disable background with anims

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -51,6 +51,9 @@ header {
 body.no-anim * {
     transition: none !important;
     animation: none !important;
+    #particles-js {
+        display: none;
+    }
 }
 
 #page-title {
