--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -369,6 +369,11 @@ section {
         font-size: $item-font-size;
         padding: 0.2em;
 
+        i {
+            vertical-align: middle;
+            font-size: 24px;
+        }
+
         img {
             vertical-align: middle;
             float: "left";
